--- a/style.css
+++ b/style.css
@@ -1,51 +1,38 @@
-
 :root {
-    font-size: 62.5%;
+    font-family: "Alice", serif;
+    line-height: 150%;
+    color: #573A37;
 }
 
 body {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin: 0;
-    font-family: Alice;
-
+    background-image: url(./assets/bg-image.jpg.jpg);
+    background-size: cover;
 }
 
 img {
-    border-radius: 1.6rem;
-
+    border-radius: 16px;
 }
 
-
-
-.container {
-    display: flex;
+#page {
+    box-sizing: border-box;
     width: 800;
-    padding: 2.4rem;
-    flex-direction: column;
-    align-items: flex-start;
-    gap: 2.4rem;
-    border-radius: 2.4rem;
+    padding: 24px;
+    background-color:  #F0E8C2;
+    border-radius: 24px;
+    margin: 48px auto;
+    border: 4px red;
 }
 
 h1 {
-    font-size: 4.0rem;
-    font-style: normal;
-    font-weight: 400;
-    line-height: 140%; /* 56px */
+    font-size: 40px;
+    line-height: 140%;
 }
 
 h2 {
-    font-size: 2.4rem;
-    font-style: normal;
-    font-weight: 400;
-    line-height: 150%; /* 36px */
+    font-size: 24px;
 }
 
-p {
-    font-size: 1.6rem;
-    font-style: normal;
-    font-weight: 400;
-    line-height: 150%; /* 24px */
+h1, h2 {
+    color: #291B1A;
 }
+
