--- a/style.css
+++ b/style.css
@@ -1,6 +1,10 @@
+* {
+    margin: 0;
+    padding: 0;
+}
+
 :root {
     font-family: "Alice", serif;
-    line-height: 150%;
     color: #573A37;
 }
 
@@ -19,8 +23,19 @@ img {
     padding: 24px;
     background-color:  #F0E8C2;
     border-radius: 24px;
-    margin: 48px auto;
+    margin-bottom: 4px;
     border: 4px red;
+}
+
+main {
+    padding: 24px;
+}
+
+section + section {
+    margin-top: 24px;
+}
+#about p + p {
+    margin-top: 12px;
 }
 
 h1 {
@@ -34,5 +49,11 @@ h2 {
 
 h1, h2 {
     color: #291B1A;
+    margin-bottom: 4px;
+    line-height: 150%;
+}
+
+ul {
+    padding-left: 24px;
 }
 
