--- a/style.css
+++ b/style.css
@@ -13,18 +13,18 @@ body {
     background-size: cover;
 }
 
-img {
-    border-radius: 16px;
-}
-
 #page {
     box-sizing: border-box;
-    width: 800;
+    width: 800px;
     padding: 24px;
     background-color:  #F0E8C2;
     border-radius: 24px;
-    margin-bottom: 4px;
-    border: 4px red;
+    margin: 48px auto 28px;
+
+}
+
+img {
+    border-radius: 16px;
 }
 
 main {
@@ -55,5 +55,15 @@ h1, h2 {
 
 ul {
     padding-left: 24px;
+}
+
+footer {
+    color: F0E8C2;
+    text-align: center;
+    padding-bottom: 48px;
+}
+
+footer img {
+    vertical-align: middle;
 }
 
